Feito Branch dev com autenticação desativada e com gitignore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
-
-<div *ngIf="isLoggedIn">
+<div>
   <app-bootstrap></app-bootstrap>
 </div>
 
-<div *ngIf="!isLoggedIn">
+<!-- <div *ngIf="!isLoggedIn">
   <app-login></app-login>
-</div>
-
-
-
+</div> -->
