Feito refatoração do layout pai do criar NC

--- a/src/app/bootstrap/bootstrap.component.html
+++ b/src/app/bootstrap/bootstrap.component.html
@@ -1,13 +1,4 @@
-
-<div style="margin: 20px 20px 20px 20px ;">
-  <app-menu ></app-menu>
+<app-menu></app-menu>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-
-
-<p-card [style]="{margin: '20px 20px 20px 20px', height: '780px'}">
-  <router-outlet>
-  </router-outlet>
-</p-card>
-
-
-
