--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,9 +1,6 @@
 <p-menubar [model]="items">
-
   <ng-template pTemplate="end">
-    <img class="avatar" src="../assets/images/avatar.png" alt="Avatar">
-    <span class="designation">Nome Sobrenome<br>Matrícula - Função</span>
+    <img class="avatar" src="../assets/images/avatar.png" alt="Avatar" />
+    <span class="designation">Nome Sobrenome<br />Matrícula - Função</span>
   </ng-template>
-
 </p-menubar>
-
