--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
@@ -7,6 +7,7 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   overflow-y: auto;
+  padding: 40px;
 }
 .nc-steps-header {
   display: flex;
