mudança no nome da pasta passo 1 para step1 e migração da biblioteca boostrap para primeng

--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
@@ -1,5 +1,6 @@
 .content-create-nc {
   width: 100%;
+  padding: 40px;
   height: calc(100vh - 186.6px);
   border-top: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
