Feito refactor do Header do create-nc

--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -1,23 +1,39 @@
 <div class="header-create-nc">
-  <div class="button-box-left col-6">
+  <div class="p-0 col-6">
     <div class="d-flex">
-      <button class="btn btn-secondary">
-        <i class="bi bi-house"></i>
-        Início
-      </button>
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Início"
+        class="p-button-secondary"
+        icon="pi pi-home"
+      ></button>
       <div class="text-box">
         <p>Nova Não Conformidade</p>
       </div>
     </div>
   </div>
-  <div class="button-box-right col-6">
+  <div class="col-6 d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button class="btn btn-outline-secondary">
-        Cancelar<i class="bi bi-x-lg"></i>
-      </button>
-      <button class="btn btn-secondary">
-        Salvar<i class="bi bi-download"></i>
-      </button>
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Cancelar"
+        class="p-button-outlined p-button-secondary mr-2"
+        iconPos="right"
+        icon="pi pi-times"
+      ></button>
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Salvar"
+        class="p-button-secondary"
+        iconPos="right"
+        icon="pi pi-save"
+      ></button>
     </div>
   </div>
 </div>
