Feito alteração do tamanho dos ícones do stepper

--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -26,7 +26,7 @@
           type="button"
           label="Avançar"
           (click)="nextStep()"
-          class="p-button-secondary"
+          class="p-button-secondary buttonx"
           iconPos="right"
           icon="pi pi-arrow-right"
         ></button>
