--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -1,26 +1,57 @@
-
 <div class="cabecalho">
-    <h1>Não Conformidade</h1>
-    <p>Preencha o campo abaixo com a descrição da NC e anexe evidências, sejam elas fotográficas ou documentais.</p>
+  <h1>Não Conformidade</h1>
+  <p>
+    Preencha o campo abaixo com a descrição da NC e anexe evidências, sejam elas
+    fotográficas ou documentais.
+  </p>
 </div>
 
 <div class="div-desc">
-    <div class="row">
-        <div class="col-8">
-            <div class="form-group">
-                <label for="desc-area">Descreve as ações imediatas</label>
-                <textarea class="form-control" id="desc-area" rows="7"></textarea>
-              </div>
-        </div>
-        <div class="col">
-            <label for="desc-area">Descreve as ações imediatas</label>
-           <div class="div-attachment">
-                <h1>Envie seus documentos</h1>
-                <div class="white-background">
-                    <div class="attachment-content"> 
-                    </div>
-                </div>
-           </div>
-        </div>
+  <div class="row">
+    <div class="col-8">
+      <label for="desc-area">Descreva a não conformidade</label>
+      <p-editor [style]="{ height: '210px' }"></p-editor>
     </div>
+    <div class="col">
+      <label for="desc-area">Anexe evidências objetivas ou fotográficas</label>
+      <div class="div-attachment">
+        <h1>Envie seus documentos</h1>
+        <div class="white-background">
+          <input type="file" class="input-attachment" />
+          <i class="pi pi-cloud-upload"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-3 mb-3"></div>
+
+  <div class="cabecalho">
+    <h1>Ações Imediatas</h1>
+    <p>
+      Preencha o campo abaixo com ações imediatas e anexe evidências, sejam
+      fotográficas ou documentais.
+    </p>
+  </div>
+
+  <div class="div-desc">
+    <div class="row">
+      <div class="col-8">
+        <label for="desc-area">Descreve as ações imediatas</label>
+        <p-editor [style]="{ height: '210px' }"></p-editor>
+      </div>
+      <div class="col">
+        <label for="desc-area"
+          >Anexe evidências objetivas ou fotográficas</label
+        >
+        <div class="div-attachment">
+          <h1>Envie seus documentos</h1>
+          <div class="white-background">
+            <input type="file" class="input-attachment" />
+            <i class="pi pi-cloud-upload"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
