--- a/src/app/pages/ncs/create/steps/stakeholders/stakeholders.component.css
+++ b/src/app/pages/ncs/create/steps/stakeholders/stakeholders.component.css
@@ -1,12 +1,3 @@
-.container{
-    padding-left: 0px;
-    padding-right: 0px;
-    display: flex;
-    margin-bottom: 15px;
-}
-.input-group{
-    margin-right: 20px;
-}
-.newContact {
-    width: 190px;
+h2 {
+    font-size: 28px;
 }
