--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
@@ -51,29 +51,71 @@ textarea {
 .div-attachment h1 {
   margin-top: 5px;
   font-size: 25px;
+  color: rgb(89, 89, 89);
+ 
 }
 
 .white-background {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 8px;
   height: 75%;
   background-color: white;
   border-radius: 7px;
 }
 
-.div-attachment i {
+.white-background-files {
+  padding: 10px;
+  display: flex;
+  flex-flow: column;
+  overflow: auto;
+  margin-top: 8px;
+  height: 75%;
+  background-color: white;
+  border-radius: 7px;
+}
+
+.white-background p{
   position: absolute;
-  font-size: 30px;
+  margin-top: 100px;
+  font-size: 12px;color: rgb(89, 89, 89);
   color: gray;
-  vertical-align: middle;
+}
+.white-background-files button{
+  background-color: white;
+  border: none;
+width: 40px;
+  font-size: 14px;
+  outline: none;
+}
+.white-background-files p {
+  font-size: 12px;
+  color: rgb(89, 89, 89);
+  color: gray;
+}
+
+
+.white-background i{
+  position:absolute;
+  font-size: 30px;
+  color: rgb(89, 89, 89);
+  font-size: 60px;
+}
+
+.white-background-files i {
+ 
+  font-size: 17px;
+  color: rgb(89, 89, 89);
   
 }
+
 .input-attachment{
   height: 100%;
   width: 100%;
-  opacity: 100;
-  background-color: red;
+  opacity: 0;
+  z-index: 3;
 }
-
 
 label {
   font-size: 13px;
