--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.css
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.css
@@ -102,22 +102,95 @@ label {
 }
 
 .div-ident-parceiro {
+  margin: 0;
   margin-top: 12px;
   width: 100%;
   border: 1px solid rgb(51, 51, 51);
-  text-align: center;
+  padding: 10px;
   border-radius: 7px;
   background-color: rgb(243, 243, 243);
 }
 
-.div-ident-parceiro h1 {
-  font-size: 22px;
-  margin-top: 8px;
-}
 
-.div-ident-parceiro div {
+
+.background-white {
   margin: 10px;
   background-color: white;
   border-radius: 7px;
   height: 300px;
+}
+
+
+
+.div-ident-parceiro-titulo{
+  text-align: center;
+}
+
+.dados-parceiro {
+  margin: 10px;
+  margin-top: 0px;
+  background-color: white;
+  border-radius: 7px;
+  height: 220px;
+  padding: 13px;
+  overflow: auto;
+
+}
+
+.titulo-parceiro{
+  font-size: 17px;
+  font-weight: bold;
+  margin-bottom: 0;
+  color: rgb(51, 51, 51);
+ 
+}
+
+.dados-contato h1{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(51, 51, 51)
+}
+
+.razao-social h1{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(51, 51, 51)
+
+}
+
+
+.dados-contato button{
+  width: 130px;
+  height: 30px;
+  font-size: 13px;
+}
+
+.razao-social p {
+font-size: 13px;
+}
+
+.dados-contato i {
+  font-size: 11px;
+  margin-right: 8px;
+}
+
+.info-titulo{
+  margin-bottom: 1px;
+font-weight: bold;
+color: rgb(103, 103, 103);
+}
+
+.info-dados{
+  color: rgb(153, 153, 153);
+  ;
+}
+
+.contato-info i{
+  font-size: 14px;
+  color: rgb(103, 103, 103);
+  margin-right: 10px;
+}
+
+.contato-info{
+  margin-top: 5px;
 }
