--- a/src/app/pages/ncs/create/waiting-product/waiting-product.component.html
+++ b/src/app/pages/ncs/create/waiting-product/waiting-product.component.html
@@ -1,4 +1,4 @@
-<div class="content mt-3">
+<div class="content">
   <h4>Aguardando identificação do produto...</h4>
   <div class="image-box d-flex align-items-center justify-content-center">
     <img src="../../../../../../../assets/images/Ilustrações.svg" alt="" />
