--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  box-sizing: border-box;
+ 
 }
 
 .row {
@@ -12,18 +12,18 @@
 }
 
 .cabecalho h1 {
-  font-size: 30px;
+  font-size: 25px;
+  font-weight: 500;
   margin-bottom: 0px;
   margin-top: 0px;
+  
 }
 
 .cabecalho p {
   font-size: 14px;
   color: gray;
 }
-.cabecalho{
-  margin-top: 0px;
-}
+
 label {
   font-size: 14px;
   margin-bottom: 6px;
