--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.css
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.css
@@ -12,7 +12,9 @@
 }
 
 .cabecalho h1 {
-  font-size: 27px;
+  
+  font-size: 25px;
+  font-weight: 500;
   margin-bottom: 0px;
   margin-top: 0px;
 }
@@ -81,7 +83,7 @@ label {
   margin-left: 3px;
 }
 
-#div-att-col2 button {
+#div-att-col2 a {
   width: 100%;
   font-size: 14px;
   padding-top: 7px;
@@ -96,15 +98,23 @@ label {
   padding: 7px;
 }
 
+
+
 .col-search {
   display: flex;
   align-items: flex-end;
 }
 
+.col-search i{
+  font-size: 15px;
+  margin-left: 4px;
+}
+
 .div-ident-parceiro {
   margin: 0;
-  margin-top: 12px;
+  margin-top: 15px;
   width: 100%;
+  
   border: 1px solid rgb(51, 51, 51);
   padding: 10px;
   border-radius: 7px;
