--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -1,3 +1,7 @@
+<p *ngFor="let item of this.customerService.customers">
+  {{ item.city }}
+</p>
+
 <div class="row">
   <div class="col">
     <div class="cabecalho">
@@ -13,15 +17,19 @@
   <div class="col-2" id="div-att-col2">
     <p>Última atualização: Há 3 minutos</p>
 
-    <button type="button" class="btn btn-dark" iconPos="right">
+    <a
+      href="http://localhost:4200/ncs/import"
+      role="button"
+      class="btn btn-dark"
+    >
       Atualizar Cadastros
       <i class="pi pi-download" id="icon-button"></i>
-    </button>
+    </a>
   </div>
 </div>
 
 <div class="div-search">
-  <div class="row">
+  <div class="row row-1">
     <div class="col-3">
       <div class="dropdown">
         <label>Tipo de Parceiro</label>
@@ -43,7 +51,13 @@
           [(ngModel)]="pesquisar"
         />
         <div class="input-group-append">
-          <button class="btn btn-dark" type="button">Buscar</button>
+          <button
+            href="http://localhost:4200/ncs/import"
+            class="btn btn-dark"
+            type="button"
+          >
+            Buscar <i class="pi pi-search"></i>
+          </button>
         </div>
       </div>
     </div>
