--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -1,4 +1,4 @@
 <div class="content">
-  <h3>Ponto de Controle</h3>
+  <h3>Ponto de Rejeição</h3>
   <app-waiting-product></app-waiting-product>
 </div>
